# gen_ai_learning

./: .gitignore  main.py  pyproject.toml  requirements.txt
apps/: 1_qna_bot.py  2_google_search_agent_with_memory.py  3_qna_bot.py  4_sql_agent.py  my_tasks.db
notebooks/: 1_basics.ipynb  2_prompt_chains.ipynb  3_add_memory.ipynb  4_strucutred_output.ipynb  5_ollama_with_langchain.ipynb  6_streaming_response.ipynb  7_basic_agent.ipynb  8_ggogle_search_agent.ipynb  9_google_search_agent_with_memory.ipynb
