[project]
name = "gen-ai-techsimplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
